# Cplusplus_sdk

./: CMakeLists.txt  README.md  bin2ascii.h  sdk_test.cpp  ytopen_sdk.cpp  ytopen_sdk.h
TencentYoutuyun/: CMakeLists.txt  bin2ascii.h  ytopen_sdk.cpp  ytopen_sdk.h
TencentYoutuyun/sign/include/: qcloud_sign.h  qcloud_sign_const.h  qcloud_sign_utils.h  qcloud_sign_utils.hpp
TencentYoutuyun/sign/src/: qcloud_sign.cpp  qcloud_sign_utils.cpp
gflags/lib/pkgconfig/: libgflags.pc  libgflags_nothreads.pc
openssl/include/openssl/: opensslconf.h
openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
sample/: CMakeLists.txt  sample.cpp
sign/include/: qcloud_sign.h  qcloud_sign_utils.h
sign/src/: qcloud_sign_utils.cpp
